readiness-app/force-app/main/default/objects/inc_ReportScheduler__c/inc_ReportScheduler__c.object-meta.xml
<CustomObject>
    <label>Incontact Report Scheduler</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>SchedulerId</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Incontact Report Scheduler</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>