readiness-app/force-app/main/default/objects/inc_ReportScheduler__c/fields/App_Name__c.field-meta.xml
<CustomField>
    <fullName>App_Name__c</fullName>
    <description>Name of the Analytics App</description>
    <inlineHelpText>Name of the Analytics App</inlineHelpText>
    <label>App Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sales Productivity</fullName>
            </value>
            <value>
                <fullName>Case Analysis</fullName>
            </value>
            <value>
                <fullName>Voice Quality Analysis</fullName>
            </value>
            <value>
                <fullName>Customer Satisfaction (CSAT)</fullName>
            </value>
            <value>
                <fullName>Lead Conversion Analysis</fullName>
            </value>
            <value>
                <fullName>Opportunity Conversion Analysis</fullName>
            </value>
            <value>
                <fullName>Volume Profit Analysis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>