readiness-app/force-app/main/default/objects/inc_ReportScheduler__c/fields/CRON_Expression__c.field-meta.xml
<CustomField>
    <fullName>CRON_Expression__c</fullName>
    <label>CRON Expression</label>
    <length>255</length>
    <type>Text</type>
</CustomField>