readiness-app/force-app/main/default/objects/inc_ReportScheduler__c/fields/Last_Run_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Run_Date__c</fullName>
    <description>Last data synch up date time</description>
    <label>Last Run Date</label>
    <type>DateTime</type>
</CustomField>