readiness-app/force-app/main/default/objects/inc_ReportScheduler__c/fields/Scheduled_Day__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Day__c</fullName>
    <label>Scheduled Day</label>
    <length>255</length>
    <type>Text</type>
</CustomField>