readiness-app/force-app/main/default/objects/inc_ReportScheduler__c/fields/Underlying_Reports__c.field-meta.xml
<CustomField>
    <fullName>Underlying_Reports__c</fullName>
    <label>Underlying Reports</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>