readiness-app/force-app/main/default/objects/inc_ReportScheduler__c/fields/UpdateScheduledJob__c.field-meta.xml
<CustomField>
    <fullName>UpdateScheduledJob__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update Schedule Job</label>
    <type>Checkbox</type>
</CustomField>