readiness-app/force-app/main/default/objects/inc_ReportScheduler__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Category__c</columns>
    <columns>App_Name__c</columns>
    <columns>NAME</columns>
    <columns>Frequency__c</columns>
    <columns>Scheduled_Day__c</columns>
    <columns>Start_DateTime__c</columns>
    <columns>UpdateScheduledJob__c</columns>
    <columns>CRON_Expression__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>